--- a/index.css
+++ b/index.css
@@ -4,9 +4,18 @@ body {
 
 h1 {
     /* color: antiquewhite; */
+    
 }
 
 #doggie {
     max-width: 200px;
     position: absolute;
+}
+
+/* #bone {
+    position: absolute
+} */
+
+#dogDropDown {
+    position:sticky;
 }
