creates 'ui' class for ui elements, sets its position to sticky in css

--- a/index.css
+++ b/index.css
@@ -13,9 +13,12 @@ h1 {
 }
 
 /* #bone {
-    position: absolute
 } */
 
-#dogDropDown {
+/* #dogDropDown {
+    position:sticky;
+} */
+
+.ui {
     position:sticky;
 }
