fixes bug where bone could appear outside window

--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ h4 {
 
 .dogCard{
     /* display: flex; */
-    background-color: orange;
+    background-color: bisque;
     width: 8rem;
     /* border: 10px; */
     border-radius: 7px;
